<resources>
    <string name="app_name">ProyectoMovil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_active_login">Iniciar Sesión para continuar</string>
    <string name="title_create">Crear una nueva cuenta</string>
    <string name="password">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="telefono">Telefono</string>
    <string name="current_password">Contraseña actual</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="usuario">Usuario</string>
    <string name="loguearse">Loguearse</string>
    <string name="login">Ingresar</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="si_tengo">Iniciar Sesión</string>
    <string name="crear_cuenta">No tienes cuenta?</string>
    <string name="cuenta_existente">Si tienes cuenta?</string>
    <string name="link_signup">Crear cuenta</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Guardar</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿has olvidado tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_menu">MenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fragment_pedido_label">Pedido</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Strings usados en el fragment metodo -->
    <string name="agregar_metodo_pago">Agregar método de pago</string>
    <string name="tarjeta_credito_debito">Tarjeta de Credito o Débito</string>
    <string name="paypal">Paypal</string>

    <!-- Strings usados en el fragment perfil -->
    <string name="editar_perfil">Editar Perfil</string>
    <string name="editar_contraseña">Cambiar Contraseña</string>


    <string name="agregar">Agregar</string>
    <string name="agregar_tarjeta">Agregar tarjeta</string>
    <string name="nombre_propietario">Nombre Propietario</string>
    <string name="numero_tarjeta">Número de tarjeta</string>
    <string name="cvv">CVV</string>
    <string name="fecha_vencimiento">Fecha de Vencimiento</string>
    <string name="todo">TODO</string>

    <!-- Strings usados en el fragment terms -->
    <string name="terminos_condiciones">TÉRMINOS Y CONDICIONES GENERALES DEL CONTRATO DE PRESTACIÓN DE SERVICIOS</string>
    <string name="terminos">Arkinka ha desarrollado una plataforma de entrega de alimentos,a través de la cual Arkinka presta los Servicios a los RestaurantesAfiliados en zonas geográficas específicas,en que los Usuarios pueden realizar Pedidos directos en dichosRestaurantes Afiliados, para que los Socios Repartidores recojan yentreguen a los Usuarios (la “Plataforma”)."</string>
    <string name="definiciones_estructura">1. Definiciones Y Estructura.</string>
    <string name="definiciones">Para los efectos de los presentes TyC, salvo pacto en contrario, (a) lo términos en mayúscula que no estén definidos en este documento tendrán el significado establecido en el Anexo “A” (Definiciones), y (b) los principios de interpretación definidos en dicho anexo serán aplicables."</string>
    <string name="object">2. Objeto.</string>
    <string name="objeto">="Arkinka está obligado a prestar los Servicios al Restaurante a través de la Plataforma, y el Restaurante está obligado a pagar las Tarifas de Servicio a Arkinkacomo contraprestación por los Servicios brindados, de acuerdo con los términos y condiciones establecidos en el Contrato y/o en los presentes TyC. Los Servicios serán prestados por Arkinka ya que éste proporcionará el acceso a la Plataforma al Restaurante, a los Usuarios y a los Socios Repartidores, con el fin de que tengan acceso a la información contendida en los mismos, y para permitir al Usuario realizar Pedidos, así como para realizar un seguimiento del estatus de sus Pedidos directamente en la Plataforma."</string>
    <string name="usos">3. Uso de la Plataforma.</string>
    <string name="usos_plataforma">(a) Cuenta del Restaurante. El Restaurante tendrá acceso a la Plataforma para que pueda crear una cuenta, y directamente pueda cargar la información de sus Productos, disponibilidad, imágenes, precios y cualquier otra información relevante (los “Detalles del Producto”), para que los Usuarios puedan encontrar toda esa información directamente en la Plataforma y puedan realizar un Pedido dentro del horario comercial habitual del Restaurante, en interacción en tiempo real (la “Cuenta del Restaurante”). Lo anterior, en el entendido que Arkinka no estará obligado a verificar o corroborar la autenticidad o exactitud de los Detalles del Producto, y cualquier responsabilidad derivada de lo anterior será exclusiva para el Restaurante."</string>
    <string name="pagos">4. Pagos y Tarifas de Servicio.</string>
    <string name="pagos_tarifas">Si el Restaurante elige la Repartición Propia como Método de Repartición, se aplicarán las siguientes reglas: (a) Pagos del Usuario fuera de Línea. Cuando la Plataforma indique que el Restaurante recibirá pagos fuera de línea por el Usuario, el Restaurante retendrá del Socio Repartidor, como lo indica la Plataforma, el precio del Pedido, incluyendo las Tarifas de Servicio, la cuales deberán ser cubiertas en ese momento por la Plataforma de Entrega y posteriormente por el Restaurante. En este caso, el Restaurante tendrá derecho a retener el pago real del Socio Repartidor del Precio del Pedido, descontando cualquier, cupón, descuento o vale que el Usuario pueda disfrutar; y (b) Pagos del Usuario en Línea. Cuando la Plataforma indique que el Restaurante recibirá pagos en línea, la Plataforma retendrá del Usuario el Precio del Pedido, una vez que el Pedido haya sido entregado. Arkinka retendrá el Precio del Pedido y pondrá a disposición del Restaurante un saldo positivo para que el Restaurante pueda transferir cualquier saldo positivo (después de descontar las Tarifas de Servicios aplicables) a su Cuenta Bancaria. Lo anterior, en el entendido de que Arkinka tendrá derecho a realizar compensaciones con el Restaurante, de forma regular o irregular, por el importe mencionado, sobre la base de las normas de liquidación que puedan ser actualizadas de tiempo en tiempo. 2. Si el Restaurante elige la Repartición por la Plataforma como Opción de Repartición, se aplicarán las siguientes reglas: (a) Pagos del Usuario fuera de Línea. Cuando la Plataforma indique que el Restaurante recibirá pagos fuera de línea por el Usuario, el Restaurante retendrá del Socio Repartidor los Precios del Pedido, que incluyen las Tarifas de Servicio, que serán abonadas a la Plataforma por el Restaurante y excluyen las Tarifas de Servicio a los Socios Repartidores. En este caso, el pago actual que el Restaurante reciba del Usuario será el Precio del Pedido, menos cualquier descuento, cupón o vale que el Usuario pudiera disfrutar.</string>
    <string name="declaraciones">5. Declaraciones y Garantías de Arkinka.</string>
    <string name="declaraciones_garantias">Arkinka declara y garantiza al Restaurante lo siguiente: (a) La celebración, entrega y cumplimiento del Contrato y de los presentes TyC por parte de Arkinka, y el cumplimiento de sus obligaciones en virtud del mismo, han sido debidamente autorizados y aprobados por cualquier autoridad corporativa necesaria; (b) La celebración del Contrato y de los presentes TyC (i) no entra en conflicto con cualquiera de las disposiciones de sus estatutos sociales, (ii) no crea ningún tipo de relación laboral o similar entre el Restaurante, Arkinka y/o cualquier Socio Repartidor, y (iii) no entra en conflicto con cualquier contrato en el que el Restaurante sea parte; (c) Cuenta con las licencias y permisos necesarios para usar y operara la Marca Registrada de Arkinka y la Plataforma en Peru y tiene suficiente autoridad para actuar bajo el Contrato y de los presentes TyC; (d) La información proporcionada y los servicios recomendados al Restaurante en la Plataforma únicamente son para referencia del Restaurante. Arkinka hará todo lo posible para garantizar la exactitud de dicha información, sin embargo, Arkinka no garantiza que dicha información esté libre de errores, defectos o virus; y (e) A excepción de las Declaraciones expresamente contenidas en el Contrato y en los presentes TyC, Arkinka no ha hecho ninguna otra declaración o garantía expresa o implícita, ya sea escrita u oral, o en cuanto a los futuros ingresos, rentabilidad o éxito del Restaurante, mientras se beneficie de los Servicios. La Plataforma se proporciona “tal cual” y no se ofrecen garantías adicionales de ningún tipo, sean ya explicitas o implícitas, con respecto a la Plataforma.
</string>


</resources>